# DistributedAndParallelSystemsProject

./: Dockerfile-c01  Dockerfile-c03  Dockerfile-c04  Dockerfile-c05  README.md  docker-compose.yml
c01-fe/: index.html  package-lock.json  package.json  vite.config.ts
c01-fe/src/: App.svelte
c01-javalin-http-server/: pom.xml
c01-javalin-http-server/src/main/kotlin/: Main.kt
c01-tomcat-server/: pom.xml
c01-tomcat-server/src/main/kotlin/ism/ase/ro/c01tomcatserver/: App.kt  HelloApplication.kt  HelloResource.kt  ImgRecvResource.kt  RabbitMQService.kt
c01-tomcat-server/src/main/webapp/WEB-INF/: beans.xml  web.xml
c03-04-openmpi-openmp-c/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint.sh  main.cpp
c03-clsub-openmpi/: executable_mpi  pom.xml
c03-clsub-openmpi/src/main/kotlin/: Main.kt
c05-nodejs-mongo/: README.md  docker-compose.yml  index.ts  package-lock.json  package.json
